@@ -34,6 +34,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Held message user notifications now come From: list-owner instead of
+      list-bounces.  Bug #714424.
+
     - Issue an HTTP 404 status for private archive file not found.
 
     - @listname entries in *_these_nonmembers are no longer case sensitive.
